Use montserrat in knitr generated figures.   Consolidate read data dependency to pictoralist.

--- a/cards/card2.Rmd
+++ b/cards/card2.Rmd
@@ -2,25 +2,23 @@
 title: "card2"
 author: "DISPLAY Lab"
 date: "3/13/2020"
-output: html_document
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
+library(pictoralist)
 knitr::opts_chunk$set(echo = TRUE)
 
-library(readr)
-library(pictoralist)
-library(extrafont)
+# Load the source code for the figure
+card_env <- new.env()
+source(file='card2.R', local=card_env)
 
-loadfonts()
-source('card2.R')
-data <- read_csv('card2.csv')
+# Load data and define recipient
+data <- pictoralist::read_data('card2.csv')
 recipient <- 'p2'
-
-figure <- run(recipient, data, list())
 ```
 
-**To:** You (Anesthesia Provider)@yourhospital.com)
+**To:** You (Anesthesia Provider)@yourhospital.com
 
 **From:** mpog-quality@med.umich.edu
 
@@ -31,10 +29,12 @@ figure <- run(recipient, data, list())
 
 Dear Dr. X,
 
-You reached the goal for [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You reached the goal for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-![](card2-fig.png)
-
+```{r figuregen, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+  # Run figure generation
+  card_env$run(recipient, data, list())
+```
 
 \  
 
