--- a/cards/card3.Rmd
+++ b/cards/card3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "card1"
+title: "card3"
 author: "DISPLAY Lab"
 date: "2020-03-20"
 output: pdf_document
@@ -11,27 +11,30 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Load the source code for the figure
 card_env <- new.env()
-source(file='card1.R', local=card_env)
+source(file='card3.R', local=card_env)
 
 # Load data and define recipient
+# Use same performer as card 2
 data <- pictoralist::read_data('synth_data.csv')
-recipient <- 'p1'
+recipient <- 'p2'
 ```
 
 **To:** You (Anesthesia Provider)@yourhospital.com
 
 **From:** mpog-quality@med.umich.edu
 
-**Subject:** You have become a top performer for PONV 03
+**Subject:** You have reached the goal for PONV 03
 
 \  
 \  
 
 Dear Dr. X,
 
-You exceeded the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
+You are performing above the peer average for the measure of [postoperative nausea and vomiting](https://mpog.org/files/quality/measures/ponv-03_spec.pdf) (PONV 03):
 
-```{r figuregen, echo=FALSE, warning=FALSE, results='hide', fig.width=5, fig.height=3, fig.showtext=TRUE}
+\ 
+
+```{r figuregen, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.width=5, fig.height=5, fig.showtext=TRUE}
   # Run figure generation
   card_env$run(recipient, data, list())
 ```
@@ -41,5 +44,3 @@ You exceeded the peer average for the measure of [postoperative nausea and vomit
 Sincerely,
 
 The MPOG Quality Team
-
-
